feat: updating_timetable

--- a/templates/dashboards/all_admin_pages/create_class_timetable.html
+++ b/templates/dashboards/all_admin_pages/create_class_timetable.html
@@ -224,6 +224,7 @@
 </div>
 </div>
 <button type="submit" name="add_times" class="bg-blue-500 p-3 rounded-lg mt-6 text-white hover:bg-blue-300"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Timetable Time</span></button>
+<a href="{%url 'clear_time' class_id=class_info.id%}" type="submit" name="add_times" class="bg-red-500 p-3 rounded-lg mt-6 text-white hover:bg-blue-300"><i class="fa-solid fa-trash-can fa-sm"></i><span class="pl-1">Clear Existing Time</span></a>
 </form>
 </div>
 
