feat: updating_all_roles_timetable

--- a/templates/dashboards/all_admin_pages/edit_timetable.html
+++ b/templates/dashboards/all_admin_pages/edit_timetable.html
@@ -12,134 +12,63 @@
             {{ table_form.class_info.label_tag }}
             {{ table_form.class_info }}
         </div>
-        <div class="mb-6">
-            {{ table_form.day_of_week.label_tag }}
+        <div class="mb-6 bg-blue-400 rounded-lg p-1">
+            <span class="text-white">{{ table_form.day_of_week.label_tag }}</span>
             {{ table_form.day_of_week }}
         </div>
         <div class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-7 gap-1">
-            <div class="border-2 border-gray-400 rounded-lg p-1">
+            <div class="border-2 border-gray-400 rounded-lg p-1 bg-blue-400">
                 <div class="mb-2">
-                    <span>First subject <br></span>
+                    <span class="text-white font-medium">First subject <br></span>
                     {{ table_form.subject_one }}
                 </div>
-        
-                <div class="mb-2">
-                    <span>Start time <br></span>  
-                    {{ table_form.subject_one_start_time }}
-                </div>
-                <div class="mb-2">
-                    <span>End time <br></span>
-                    {{ table_form.subject_one_end_time }}
-                </div>
             </div>
             
-            <div class="border-2 border-gray-400 rounded-lg p-1">
+            <div class="border-2 border-gray-400 rounded-lg p-1 bg-blue-400">
                 <div class="mb-2">
-                    <span>Second subject <br></span>
+                    <span class="text-white font-medium">Second subject <br></span>
                     {{ table_form.subject_two }}
                 </div>
-        
-                <div class="mb-2">
-                    <span>Start time <br></span>  
-                    {{ table_form.subject_two_start_time }}
-                </div>
-                <div class="mb-2">
-                    <span>End time <br></span>
-                    {{ table_form.subject_two_end_time }}
-                </div>
             </div>
 
-            <div class="border-2 border-gray-400 rounded-lg p-1">
+            <div class="border-2 border-gray-400 rounded-lg p-1 bg-blue-400">
                 <div class="mb-2">
-                    <span>Third subject <br></span>
+                    <span class="text-white font-medium">Third subject <br></span>
                     {{ table_form.subject_three }}
                 </div>
-                
-                <div class="mb-2">
-                    <span>Start time <br></span>  
-                    {{ table_form.subject_three_start_time }}
-                </div>
-                <div class="mb-2">
-                    <span>End time <br></span>
-                    {{ table_form.subject_three_end_time }}
-                </div>
             </div>
 
-            <div class="border-2 border-gray-400 rounded-lg p-1">
+            <div class="border-2 border-gray-400 rounded-lg p-1 bg-blue-400">
                 <div class="mb-2">
-                    <span>Fourth subject <br></span>
+                    <span class="text-white font-medium">Fourth subject <br></span>
                     {{ table_form.subject_four }}
                 </div>
-                
+            </div>
+
+            <div class="border-2 border-gray-400 p-1 rounded-md bg-blue-400">
                 <div class="mb-2">
-                    <span>Start time <br></span>  
-                    {{ table_form.subject_four_start_time }}
-                </div>
-                <div class="mb-2">
-                    <span>End time <br></span>
-                    {{ table_form.subject_four_end_time }}
+                    <span class="font-medium text-white">Break Time <br></span>
                 </div>
             </div>
 
-            <div class="border-2 border-gray-400 p-1 rounded-md">
+            <div class="border-2 border-gray-400 rounded-lg p-1 bg-blue-400">
                 <div class="mb-2">
-                    <span class="font-medium">Break Time <br></span>
-                </div>
-                <div class="mb-2">
-                    <span>Start time <br></span>  
-                    {{table_form.break_start_time}}
-                </div>
-                <div class="mb-2">
-                    <span>End time <br></span>
-                    {{table_form.break_end_time}}
-                </div>
-            </div>
-
-            <div class="border-2 border-gray-400 rounded-lg p-1">
-                <div class="mb-2">
-                    <span>Fifth subject <br></span>
+                    <span class="text-white font-medium">Fifth subject <br></span>
                     {{ table_form.subject_five }}
                 </div>
-        
-                <div class="mb-2">
-                    <span>Start time <br></span>  
-                    {{ table_form.subject_five_start_time }}
-                </div>
-                <div class="mb-2">
-                    <span>End time <br></span>
-                    {{ table_form.subject_five_end_time }}
-                </div>
             </div>
 
-            <div class="border-2 border-gray-400 rounded-lg p-1">
+            <div class="border-2 border-gray-400 rounded-lg p-1 bg-blue-400">
                 <div class="mb-2">
-                    <span>Sixth subject <br></span>
+                    <span class="text-white font-medium">Sixth subject <br></span>
                     {{ table_form.subject_six }}
-                </div>
-                
-                <div class="mb-2">
-                    <span>Start time <br></span>  
-                    {{ table_form.subject_six_start_time }}
-                </div>
-                <div class="mb-2">
-                    <span>End time <br></span>
-                    {{ table_form.subject_six_end_time }}
                 </div>
             </div>
             
-            <div class="border-2 border-gray-400 rounded-lg p-1">
+            <div class="border-2 border-gray-400 rounded-lg p-1 bg-blue-400">
                 <div class="mb-2">
-                    <span>Seventh subject <br></span>
+                    <span class="text-white font-medium">Seventh subject <br></span>
                     {{ table_form.subject_seven }}
-                </div>
-        
-                <div class="mb-2">
-                    <span>Start time <br></span>  
-                    {{ table_form.subject_seven_start_time }}
-                </div>
-                <div class="mb-2">
-                    <span>End time <br></span>
-                    {{ table_form.subject_seven_end_time }}
                 </div>
             </div>
         </div>
