--- a/templates/dashboards/all_admin_pages/base.html
+++ b/templates/dashboards/all_admin_pages/base.html
@@ -123,7 +123,7 @@
             
 
             <a href="#" class="profile">
-                <img src="{%static 'img/449181880_1484650349104562_652231313086318225_n.jpg'%}" alt="">
+                <img src="{%static 'img/school-logo.png'%}" alt="">
             </a>
         </nav>
         <!-- END OF NAVBAR -->
