--- a/templates/dashboards/all_student_pages/base.html
+++ b/templates/dashboards/all_student_pages/base.html
@@ -23,7 +23,7 @@
         </a>
         <ul class="side-menu top">
             <li class="{%if request.path == student_dashboard%} active {%else%}{%endif%}">
-                <a href="{%url 'student_dashboard'%}">
+                <a href="{{student_dashboard}}">
                     <i class='bx bxs-dashboard' ></i>
                     <span class="text">Dashboard</span>
                 </a>
