--- a/templates/base.html
+++ b/templates/base.html
@@ -48,12 +48,10 @@
 <body>
 {% url 'home_page' as home_url %}
 {% url 'about_page' as about_url %}
-{% url 'course_Page' as course_url %}
 {% url 'team_page' as team_url %}
 {% url 'testimonial_page' as testimonial_url %}
 {% url 'page_404' as page_404_url %}
 {% url 'contact_page' as contact_url %}
-{% url 'admin_dashboard' as dashboard_url %}
 {% url 'register' as register_url %}
 {% url 'login' as login_url %}
 
@@ -70,21 +68,10 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="{{home_url}}" class="nav-item nav-link {% if request.path == home_url %}active{% endif %}">Home</a>
                 <a href="{{about_url}}" class="nav-item nav-link {% if request.path == about_url %}active{% endif %}">About</a>
-                <a href="{{course_url}}" class="nav-item nav-link {% if request.path == course_url %}active{% endif %}">Courses</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu fade-down m-0">
-                        <a href="{%url 'team_Page'%}" class="dropdown-item">Our Team</a>
-                        <a href="{%url 'testimonial_Page'%}" class="dropdown-item">Testimonial</a>
-                        <a href="{%url 'page_404'%}" class="dropdown-item">404 Page</a>
-                    </div>
-                </div>
                 <a href="{{contact_url}}" class="nav-item nav-link {% if request.path == contact_url %}active{% endif %}">Contact</a>
                 <a href="{{register_url}}" class="nav-item nav-link {% if request.path == register_url %}active{% endif %}">Register</a>
                 <a href="{{login_url}}" class="nav-item nav-link {% if request.path == login_url %}active{% endif %}">Login</a>
-                <a href="{{dashboard_url}}" class="nav-item nav-link {% if request.path == dashboard_url %}active{% endif %}">Dashboard</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -112,14 +99,11 @@
                     <h4 class="text-white mb-3">Quick Link</h4>
                     <a class="btn btn-link" href="{% url 'about_page'%}">About Us</a>
                     <a class="btn btn-link" href="{%url 'contact_page'%}">Contact Us</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">FAQs & Help</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, Lagos, Nigeria</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+234 812 345 7890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -151,31 +135,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="container">
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Elearning</a>, All Right Reserved.
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                        Designed By <a class="border-bottom" href="https://htmlcodex.com">Success Simeon</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="">Home</a>
-                            <a href="">Cookies</a>
-                            <a href="">Help</a>
-                            <a href="">FQAs</a>
+                            <a href="{%url 'home_page'%}">Home</a>
                         </div>
                     </div>
                 </div>
