--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -210,7 +210,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="{%static 'img/team-1.jpg'%}" alt="">
+                            <img class="img-fluid" src="{%static 'img/team-1.jpeg'%}" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                         </div>
@@ -228,7 +228,7 @@
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Mis Victoria</h5>
+                            <h5 class="mb-0">Mr Feyi</h5>
                             <small>English Language</small>
                         </div>
                     </div>
@@ -241,7 +241,7 @@
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Mr Feyi</h5>
+                            <h5 class="mb-0">Mis Victoria</h5>
                             <small>Biology</small>
                         </div>
                     </div>
@@ -282,7 +282,7 @@
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="{% static 'img/testimonial-4.jpg' %}" style="width: 80px; height: 80px;">
+                    <img class="border rounded-circle p-2 mx-auto mb-3" src="{% static 'img/testimonial-4.jpeg' %}" style="width: 80px; height: 80px;">
                     <h5 class="mb-0">Mr. John</h5>
                     <p>Engineer</p>
                     <div class="testimonial-text bg-light text-center p-4">
