--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -118,8 +118,8 @@
     <div class="container-xxl py-5 category">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Categories</h6>
-                <h1 class="mb-5">Courses Categories</h1>
+                <h6 class="section-title bg-white text-center text-primary px-3">Beacon Of Success</h6>
+                <h1 class="mb-5">Our School</h1>
             </div>
             <div class="row g-3">
                 <div class="col-lg-7 col-md-6">
@@ -168,7 +168,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Courses</h6>
+                <h6 class="section-title bg-white text-center text-primary px-3">Photos</h6>
                 <h1 class="mb-5">Some School Pictures</h1>
             </div>
             <div class="row g-4 justify-content-center">
