--- a/templates/main/contact.html
+++ b/templates/main/contact.html
@@ -63,9 +63,10 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <iframe class="position-relative rounded w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d507563.4220724467!2d5.0234849734374905!3d6.350105800000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1040d31bc47fed17%3A0xfc4eec73785da9d!2sBeacon%20of%20Success%20School!5e0!3m2!1sen!2sng!4v1734545727711!5m2!1sen!2sng"
+        frameborder="0" style="min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
+        tabindex="0"></iframe>
+
                 </div>
                 <div class="col-lg-4 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
                     <form>
