--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Beacon Of Success</title>
+    <title>Norman Edward Educational center</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -59,7 +59,9 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="{{home_url}}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>Beacon Of Success</h2>
+            <h3 class="m-0 text-primary fs-4 fs-sm-6" style="display: flex; flex-wrap: wrap;">
+                <i class="fa fa-book me-3"></i> Norman Edward Educational Center
+            </h3>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -141,7 +143,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Beacon Of Success</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="{{home_url}}">Norman Edward Educational center</a>, All Right Reserved.
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a class="border-bottom" href="https://htmlcodex.com">Success Simeon</a>
