--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -118,7 +118,7 @@
     <div class="container-xxl py-5 category">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Beacon Of Success</h6>
+                <h6 class="section-title bg-white text-center text-primary px-3">Norman Edward Educational center</h6>
                 <h1 class="mb-5">Our School</h1>
             </div>
             <div class="row g-3">
